--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DemocToken (DMC)</title>
+    <title>DEMOCRATIC (DMC)</title>
     <style>
         /* Estilos generales */
         body {
@@ -124,21 +124,21 @@
 </head>
 <body>
     <header>
-        <h1>DemocToken (DMC)</h1>
-        <p>Tu token ERC-20 en Binance Smart Chain</p>
+        <h1>DEMOCRATIC (DMC)</h1>
+        <p>Democratic ERC-20 en Binance Smart Chain</p>
     </header>
 
     <div class="container">
         <div class="info">
-            <h2>¿Qué es DemocToken?</h2>
+            <h2>¿Qué es Democratic?</h2>
             <p>
-                DemocToken (DMC) es un token ERC-20 desplegado en Binance Smart Chain (BSC). 
-                Está diseñado para facilitar transacciones, pagos y otros casos de uso en la blockchain.
+                Democratic (DMC) es un token ERC-20 desplegado en Binance Smart Chain (BSC). 
+                Está diseñado para facilitar transacciones, pagos y otros casos de uso en la red.
             </p>
 
             <h2>Información Técnica</h2>
             <ul>
-                <li><strong>Nombre:</strong> DemocToken</li>
+                <li><strong>Nombre:</strong> Democratic</li>
                 <li><strong>Símbolo:</strong> DMC</li>
                 <li><strong>Decimales:</strong> 18</li>
                 <li><strong>Suministro Total:</strong> 100,000,000 DMC</li>
@@ -158,15 +158,15 @@
             <p>
                 Síguenos en nuestras redes sociales para más información:
                 <ul>
-                    <li><a href="https://twitter.com/DemoToken" target="_blank">Twitter</a></li>
-                    <li><a href="https://t.me/DemoToken" target="_blank">Telegram</a></li>
+                    <li><a href="https://twitter.com/Democratic" target="_blank">Twitter</a></li>
+                    <li><a href="https://t.me/Democratic" target="_blank">Telegram</a></li>
                 </ul>
             </p>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2025 DemocToken. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Democratic. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
